2003-12-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (rftp_retr): consistent style when checking for non-NULL.

	* sftp.c (sftp_retr): only use startp if > 0.  Initialize sizep.

2003-12-21  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sftp.c: bump SFTP_DATA_LEN to 8192.

2003-12-19  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (rftp_fclose): correct logic in checking response.

	* fn_tag.c (fn_gettags): check whether tag is in current directory
	without changing its name.

2003-12-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c (main): new option to download tags from file on startup.

2003-12-04  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* status.c (status_do): don't overwrite percentage in tag mode.

2003-07-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sftp.c (sftp_close, _sftp_close): move part shared with signal
	handler to own function.
	(sftp_open): set up SIGCHLD handler.
	(_sftp_sig_child): collect exit status when ssh dies.

2003-05-19  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* display.c (disp_restat): don't truncate string if it is short
	enough.

2003-05-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in, INSTALL, install-sh, missing, mkinstalldirs:
	update to autoconf 2.50 and automake 1.7.
	* configure.in: check for vasprintf.
	* snprintf.c: add vasprintf replacement.

	* display.c (disp_status, disp_restat): avoid fixed-size buffer.

2003-05-13  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (_ftp_update_transfer): add missing argument to
	disp_status call.
	
	* ftp.c (ftp_reconnect): _ftp_port and _ftp_user may well be NULL.

	* util.c (noalloc_basename): move basename replacement function
	here and rename; adapt callers.
	* basename.c: remove.
	* configure.in: remove test for basename(3).

2003-04-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* mkbind.c (main): fix typo resulting in undersized buffer.
	Reported by Anil Madhavapeddy.
